Checkpoint IV, EventScope processing added